<resources>
    <string name="app_name">Chessboard.Net</string>
    <string name="HTTPAPIurl">http://gingerpi.ddns.net/chess/</string>
    <!--string name="HTTPAPIurl">http://192.168.0.1:5000</string-->
    <string name="DB_NAME">LocalCache.db</string>

    <!-- main activity -->
    <string name="WelcomeMessage">Welcome to Chessboard.Net</string>
    <string name="newVersion">A new version of the application is available for download. You must upgrade to continue using this service.</string>
    <string name="playOnline">Play online</string>
    <string name="playOnlineHint">Play online with real actual human beings</string>
    <string name="challengeFriend">With Friend</string>
    <string name="setUsername">Enter opponent\'s username</string>
    <string name="confirmChallenge">Go!</string>
    <string name="cancel">Cancel</string>
    <string name="challengeStranger">With Anyone</string>
    <string name="statsbutton">View past match Statistics</string>
    <string name="settingsbutton">Change user preferences</string>
    <string name="queueingToast">Queueing for match</string>
    <string name="inMatchToast">already in Match</string>
    <string name="noserver">No server available to join</string>
    <string name="noSuchOpponentToast">That player does not exist</string>
    <string name="opponentInMatchToast">Opponent already in match</string>
    <string name="matchmakingError">Error connecting to the match making system</string>
    <string name="usercheckupfail">Failed to get opponent info from httpapi</string>
    <string name="exit">Exit</string>

    <!-- login -->
    <string name="loginBanner">You must login or sign up to use Chessboard.Net</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conPassword">Confirm Password</string>
    <string name="badpwd">Incorrect password</string>
    <string name="nouser">User does not exist</string>voice quality
    <string name="authfail">Failed to Authenticate</string>
    <string name="nomatchpwd">Passwords do not match</string>
    <string name="duplicateUser">Existing username found: try another</string>
    <string name="connfail">Failed to connect to the Authentication server</string>

    <!-- chessplayer -->
    <string name="send">Send</string>
    <string name="surrender">Surrender</string>
    <string name="connecting">Connecting to server</string>
    <string name="connected">Connected to server</string>
    <string name="reconnect">Reconnect</string>
    <string name="disconnect">Disconnected from server</string>
    <string name="surrendered">Surrendering and disconnecting from server</string>
    <string name="you">You: \u0020</string>
    <string name="unknownuser">Unknown user:</string>
    <string name="selfCheck">That would leave you in check</string>
    <string name="badmove">You may not move there</string>
    <string name="check">You are in check</string>
    <string name="checkmate">You have been defeated</string>
    <string name="pqueen">Promote to queen</string>
    <string name="pknight">Promote to Knight</string>
    <string name="prook">Promote to rook</string>
    <string name="pbishop">Promote to bishop</string>

    <!--statistics -->
    <string name="refreshlabel">Refresh</string>
    <string name="noconnhttp">Failed to connect to the httpapi</string>

    <!-- settings -->
    <string name="setSet1">Prefered Set</string>
    <string name="setSet2">Alternate set</string>
    <string name="success">Updated setting successfully</string>
</resources>
